--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,16 @@ author_profile: true
 
 {% include base_path %}
 
+- CEE 372: Mechanics of Solids, Fall 2021, 2022
+- CEE 4/689: Dynamics of Structures, Spring 2020, Fall 2021, Fall 2022
+- CEE 704: Finite Element Analysis, Spring 2021, Spring 2022
+
+I am interested in writing codes to visualize some of the basic concepts in the classroom.
+
+- Wave propagation
+- Vibration of SDOF systems
+- Vibration of MDOF systems
+
 <!--
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
